tests/Unit/PHPStan/Rules/Fixtures/DisallowAnonymousFunction/Valid/RegularFunction.php
<?php

declare(strict_types=1);

namespace SquidIT\Tests\PhpCodingStandards\Unit\PHPStan\Rules\Fixtures\DisallowAnonymousFunction\Valid;

function regularFunction(): string
{
    return 'regular';
}
